# runwa

./: .gitignore  CONFIG_V2.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
.claude/: settings.local.json
.github/workflows/: build.yml
.husky/: pre-commit
native/: Cargo.toml  build.rs  package.json
native/src/: lib.rs  macos.rs  windows_impl.rs
native/src/remap/: macos.rs  macos_desktop_tracker.rs  macos_move_window.rs  mod.rs  rules.rs  state.rs  synth.rs  windows.rs
scripts/: mac-after-sign.mjs  mac-restamp-signature.mjs
src/main/: auto-update.ts  hotkey-manager.ts  icon-cache.ts  index.ts  palette-window.ts  process-utils.ts  settings-store.ts  settings-window.ts  startup-integration.ts  tray.ts
src/main/ipc/: handlers.ts
src/main/modules/: index.ts  registry.ts  types.ts
src/main/modules/app-search/: enumerator.ts  index.ts  launcher.ts
src/main/modules/command-palette/: index.ts  keystrokes.ts
src/main/modules/groq-stt/: groq-client.ts  index.ts  indicator-window.ts  recorder-window.ts  uiohook-bridge.ts
src/main/modules/hotstrings/: index.ts  keymap.ts  parser.ts  service.ts
src/main/modules/keyboard-remap/: hidutil.ts  index.ts  native.ts  rules-template.ts  rules-view.ts  service.ts
src/main/modules/window-switcher/: index.ts  native.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: globals.css  main.tsx
src/renderer/src/components/: ConfirmDialog.tsx
src/renderer/src/lib/: electron.ts  hotkey.ts  (+3 more)
src/shared/: types.ts
(+25 files in other folders)
